Cleanup deprecated boxing
These boxed primitive constructors have been marked for removal in
future versions of Java, see
https://www.oracle.com/java/technologies/javase/9-deprecated-features.html#JDK-8065614.